--- a/index.html
+++ b/index.html
@@ -19,17 +19,39 @@
       </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script>
-      alert("navigator");
       navigator.bluetooth.requestDevice({
-        filters: [{
-          name: 'choose-democracy'
-        }],
+        filters: ['chooose-democracy'],       // you can't use filters and acceptAllDevices together
         optionalServices: ['choose-democracy']
       })
-      .then(device => { alert("get device"); });
-      .catch(error => { console.log(error); });
+      .then(function(device) {
+        myDevice = device;
+        console.log(device);
+        return device.gatt.connect();
+      })
+      .then(function(server) {
+        return server.getPrimaryService(myService);
+      })
+      .then(function(service) {
+        return service.getCharacteristics();
+      })
+      .then(function(characteristics) {
+        for (c in characteristics) {
+          characteristics[c].startNotifications()
+          .then(subscribeToChanges);
+        }
+      })
+      .catch(function(error) {
+        console.error('Connection failed!', error);
+      });
+
+      function subscribeToChanges(characteristic) {
+        characteristic.oncharacteristicvaluechanged = handleData;
+      }
+      function handleData(event) {
+        var buf = new Uint8Array(event.target.value);
+        alert(buf);
+      }
       var msg = "aaa";
       $('#messages').append($('<li>').text(msg));
       $('#messages_').scrollTop($('#messages_')[0].scrollHeight);
