test device connection

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </main>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>
+      if (navigator.bluetooth) {
+        alert("244");
+      }
       navigator.bluetooth.requestDevice({
         filters: ['chooose-democracy'],       // you can't use filters and acceptAllDevices together
         optionalServices: ['choose-democracy']
