test device connection

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
       var myDevice;
       navigator.bluetooth.requestDevice({
-        filters: ['chooose-democracy'],       // you can't use filters and acceptAllDevices together
+        filters: ['choose-democracy'],       // you can't use filters and acceptAllDevices together
         optionalServices: ['choose-democracy']
       })
       .then(function(device) {
