--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
       }
       var myDevice;
       navigator.bluetooth.requestDevice({
-        filters: ['choose-democracy'],       // you can't use filters and acceptAllDevices together
-        optionalServices: ['choose-democracy']
+        filters: [{name: 'choose-democracy'}]
       })
       .then(function(device) {
         myDevice = device;
