test device connection

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
       var myDevice;
       navigator.bluetooth.requestDevice({
-        filters: [{name: 'democracy'}],
+        //filters: [{name: 'democracy'}],
         acceptAllDevices: true
       })
       .then(function(device) {
